# scrape_image

./: .gitignore  README.md  combined.py  img_gen.py  multiple_csv.py  product_details.py  pyproject.toml  rufus.py  rufus_img_gen.py  rufus_img_gen_2.py  scraping_final.py  static_image_gen.py  test_driver.py
amazon_data/B0BSH8J2MJ/: amazon_complete_data_B0BSH8J2MJ.txt
src/scraping/: crew.py  main.py  scrape_competitor
src/scraping/config/: agents.yaml  tasks.yaml
