[project]
name = "scraping"
version = "0.1.0"
description = "scraping using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
    "selenium>=4.34.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scraping = "scraping.main:run"
run_crew = "scraping.main:run"
train = "scraping.main:train"
replay = "scraping.main:replay"
test = "scraping.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
